New table style for people.html

--- a/tracker/templates/tracker/people.html
+++ b/tracker/templates/tracker/people.html
@@ -170,8 +170,17 @@
 
       <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
         <div class="col-md-6">
-          <h1 class="page-header">Developer List</h1>
+
+          <div class="panel-group">
+            <div class="panel panel-success">
+              <div class="panel-heading"><h2>Developer List</h2></div>
+              <div class="panel-body">
+
+          <!-- <h1 class="page-header">Developer List</h1> -->
           <table class="table table-striped">
+
+
+
             <thead>
               <tr>
                 <th>ID</th>
@@ -186,10 +195,14 @@
               </tr>
               {% endfor %}
             </tbody>
+
           </table>
         </div>
       </div>
-
+      
+    </div>
+    </div>
+    </div>
 
         </div>
       </div>
