--- a/tracker/templates/tracker/project_index.html
+++ b/tracker/templates/tracker/project_index.html
@@ -188,10 +188,7 @@
               <!-- Trigger the modal with a button -->
               <button type="button" class="btn btn-lg btn-danger" data-toggle="modal" data-target="#myModal">Close Current Iteration</button>
 
-             <button type="button" class="btn btn-lg btn-success">Start the Iteration</button>
-
-
-
+             <button type="button" class="btn btn-lg btn-success">Create the Iteration</button>
 
               <!-- Modal -->
               <div class="modal fade" id="myModal" role="dialog">
